[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.294118, 0.345098, 0.576471, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -38.0
margin_right = 62.5
margin_bottom = 38.0
custom_constants/separation = 8

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_right = 125.0
margin_bottom = 20.0
text = "Continue Meeting"

[node name="HotKeysButton" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 48.0
text = "Hot Keys"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 125.0
margin_bottom = 76.0
text = "Exit Meeting"
